tests/ui/parser/issues/issue-5806.stderr
error: couldn't find file `$DIR/../parser`
  --> $DIR/issue-5806.rs:5:1
   |
LL | mod foo;
   | ^^^^^^^^

error: aborting due to 1 previous error

